force-app/main/default/objects/IMNA_Pipeline_Stage_Trend__c/IMNA_Pipeline_Stage_Trend__c.object-meta.xml
<CustomObject>
    <description>This object is used to store data for Analytic Snapshot report runs</description>
    <label>IMNA Pipeline Stage Trend</label>
    <nameField>
        <label>IMNA Pipeline Stage Trend Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IMNA Pipeline Stage Trends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>