force-app/main/default/objects/IMNA_Pipeline_Stage_Trend__c/fields/Average_Stage_Duration__c.field-meta.xml
<CustomField>
    <fullName>Average_Stage_Duration__c</fullName>
    <label>Average Stage Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>