force-app/main/default/objects/IMNA_Pipeline_Stage_Trend__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Qualification</fullName>
            </value>
            <value>
                <fullName>2 - Solution Developed</fullName>
            </value>
            <value>
                <fullName>3 - Solution Agreed</fullName>
            </value>
            <value>
                <fullName>4 - Negotiate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>