force-app/main/default/objects/IMNA_Pipeline_Stage_Trend__c/fields/Total_Annual_Amount_converted__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Amount_converted__c</fullName>
    <label>Total Annual Amount (converted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>